// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3id getIdFromEthAddress should create a new identity on first call 1`] = `"did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB"`;

exports[`3id getIdFromEthAddress should create a new identity on first call 2`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#signingKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB",
  "publicKey": Array [
    Object {
      "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#signingKey",
      "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#encryptionKey",
      "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x12345",
      "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
  ],
}
`;

exports[`3id keyring logic should init space keyrings correctly 1`] = `"did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu"`;

exports[`3id keyring logic should init space keyrings correctly 2`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu#subSigningKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu",
  "proof": Object {
    "alg": "ES256K",
    "signature": "kNXHa9oM702qr0zTaVCQTr9FHGqe5y7jpR32RJeB6JCqpaLQIG1Jq2hl3mRFlnS9k3O3K955D1AHnZzG70OeOw",
  },
  "publicKey": Array [
    Object {
      "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#signingKey",
      "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#encryptionKey",
      "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x12345",
      "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu#subSigningKey",
      "publicKeyHex": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu#subEncryptionKey",
      "publicKeyBase64": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
  "root": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB",
  "space": "space1",
}
`;

exports[`3id keyring logic should init space keyrings correctly 3`] = `"did:3:zdpuAybZA6fWWGhc2wwXNvfjB6T8efbKDxvCfMRhapxxiLk5X"`;

exports[`3id keyring logic should init space keyrings correctly 4`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:zdpuAybZA6fWWGhc2wwXNvfjB6T8efbKDxvCfMRhapxxiLk5X#subSigningKey",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:zdpuAybZA6fWWGhc2wwXNvfjB6T8efbKDxvCfMRhapxxiLk5X",
  "proof": Object {
    "alg": "ES256K",
    "signature": "CI8en0nLXOAf-UiHrnICT09GTnuVlIaP09jMokJYy-KXCGzHXGJ39EdzCVUcGvN0AlTxcgkxGOhrnQUvTp0B-Q",
  },
  "publicKey": Array [
    Object {
      "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#signingKey",
      "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#encryptionKey",
      "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "ethereumAddress": "0x12345",
      "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#managementKey",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:zdpuAybZA6fWWGhc2wwXNvfjB6T8efbKDxvCfMRhapxxiLk5X#subSigningKey",
      "publicKeyHex": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "id": "did:3:zdpuAybZA6fWWGhc2wwXNvfjB6T8efbKDxvCfMRhapxxiLk5X#subEncryptionKey",
      "publicKeyBase64": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
  "root": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB",
  "space": "space2",
}
`;

exports[`3id login/out logic should log out correctly 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#signingKey",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB",
    "publicKey": Array [
      Object {
        "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#signingKey",
        "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#encryptionKey",
        "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
        "type": "Curve25519EncryptionPublicKey",
      },
      Object {
        "ethereumAddress": "0x12345",
        "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#managementKey",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOm51bGwsImRhdGEiOiJzb21lIGRhdGEiLCJpc3MiOiJkaWQ6Mzp6ZHB1QXhmaTE2RzNmM2NnN0ZhcjY4ZU5hcWFYQ1pCd0p4RXZBSk5ZaFU2Q2M0a1JCIn0.v8d68ump3gGBSLjl4BUBB8tFMSRwGlqxj2_1qLqBdD3nIPUuxN5XbikRSBLO_zEhajO4scKkqkMxrGC123vGxw",
  "payload": Object {
    "data": "some data",
    "iat": null,
    "iss": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB",
  },
  "signer": Object {
    "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#signingKey",
    "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`3id login/out logic should log out correctly 2`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu#subSigningKey",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu",
    "proof": Object {
      "alg": "ES256K",
      "signature": "kNXHa9oM702qr0zTaVCQTr9FHGqe5y7jpR32RJeB6JCqpaLQIG1Jq2hl3mRFlnS9k3O3K955D1AHnZzG70OeOw",
    },
    "publicKey": Array [
      Object {
        "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#signingKey",
        "publicKeyHex": "04e9e888359453eb2188f166972424cd4c036e400ed4c1ec5832f2bb457e07e58883192ebba78d74641207e1d67a8451284f9f2315282311a3179e01e4f92b0676",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#encryptionKey",
        "publicKeyBase64": "gSXOO8r9n4Nz0qkJHwa9pSpK9qGzl6IsrP4bTd5c/3w=",
        "type": "Curve25519EncryptionPublicKey",
      },
      Object {
        "ethereumAddress": "0x12345",
        "id": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB#managementKey",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu#subSigningKey",
        "publicKeyHex": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
        "type": "Secp256k1VerificationKey2018",
      },
      Object {
        "id": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu#subEncryptionKey",
        "publicKeyBase64": "zaPBNwm0qXFe9lUAqldGuhNdle6jbRtyUISoO+S3CBY=",
        "type": "Curve25519EncryptionPublicKey",
      },
    ],
    "root": "did:3:zdpuAxfi16G3f3cg7Far68eNaqaXCZBwJxEvAJNYhU6Cc4kRB",
    "space": "space1",
  },
  "issuer": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOm51bGwsImRhdGEiOiJzb21lIGRhdGEiLCJpc3MiOiJkaWQ6Mzp6ZHB1QXBGdGZBbjU2NkFMUW52NHJvMjkyNWlVWTVUV3Q0aVNoSHJINlRZMjl2UFF1In0.K2Mjs5MWNXhEt4cAPBmGnf4bGdbl47vUTeIWgSZaHZLbMDaaxJ5CDUd4ZkKRGPmx_S3bsS8YfGghWN4jbPwZDw",
  "payload": Object {
    "data": "some data",
    "iat": null,
    "iss": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu",
  },
  "signer": Object {
    "id": "did:3:zdpuApFtfAn566ALQnv4ro2925iUY5TWt4iShHrH6TY29vPQu#subSigningKey",
    "publicKeyHex": "04a514c9de733883c7e264353988188dd815677af6d219068b540077a8eeaf5aad8ca93b512006fd50257347f849475dfe719acfc60256e40b5f4399dcc7350bbf",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;
